--- a/css/default.css
+++ b/css/default.css
@@ -12,4 +12,5 @@ div#footer { color: rgb(150, 150, 150); font-size: 12px; padding: 12px 0px; text
 div#content { background-color: rgb(59, 59, 59); padding: 10px 30px; }
 div#content img.logo { float: right; margin: 10px; width: 150px; height: 150px; }
 div#content h2 small { font-size: 14px; }
+div#links { background-color: rgb(59, 59, 59); padding: 10px 30px; }
 input[type="button"]:not(:disabled) { cursor: pointer; }
