Add small headings in 'how to upgrade' paragraph

--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,7 @@ a, a:active { color: rgb(60, 162, 162); text-decoration: none; }
 a:hover { color: rgb(33, 90, 109); text-decoration: none; }
 body { background-color: rgb(45, 45, 45); color: #dedfe0; font-size: 16px; margin: 0px auto; width: 900px; }
 h2 { font-size: 20px; color: #f2f3f4;}
+h3 { font-size: 16px; margin-bottom: -10px;}
 li { margin-bottom: 6px; }
 div#header { padding: 12px 0px; text-align: center; }
 div#logo a { /*color: rgb(232, 186, 63);  float: left; */ font-size: 24px; font-weight: bold; text-decoration: none; color: #f2f3f4; }
