--- a/css/default.css
+++ b/css/default.css
@@ -15,3 +15,4 @@ div#content img.logo { float: right; margin: 10px; width: 150px; height: 150px; 
 div#content h2 small { font-size: 14px; }
 div#links { background-color: rgb(59, 59, 59); padding-bottom: 10px; padding-left: 30px; padding-right: 30px; padding-top: 1px; }
 input[type="button"]:not(:disabled) { cursor: pointer; }
+div#footer p {margin-top: 0;}
